@@ -3,12 +3,12 @@ type: dashboard-widget
 data:
   id: 2f06f7e5-b34f-47f7-a953-5eba2f386139
   type: grid
-  reloadPeriod: 10000
+  reloadPeriod: 60000
   permissions:
     role:
       - admin
-  title: _("S.M.A.R.T.")
-  description: _("Displays the S.M.A.R.T. information of all monitored disk devices.")
+  title: _("S.M.A.R.T. Status")
+  description: _("Displays the S.M.A.R.T. status of all monitored disk devices.")
   # Text used in templates and therefore cannot be automatically extracted
   # by i18n tools.
   i18n:
@@ -20,7 +20,7 @@ data:
     - _("Device has many bad sectors.")
   grid:
     item:
-      content: '{{ canonicaldevicefile }}{% if temperature %}<br>{{ temperature }}°C{% endif %}'
+      content: '{{ canonicaldevicefile }}'
       class: 'omv-cursor-pointer omv-text-center omv-text-nowrap {% set overallStatusColor = { "BAD_ATTRIBUTE_NOW": "omv-background-color-pair-error", "BAD_ATTRIBUTE_IN_THE_PAST": "omv-background-color-pair-error", "BAD_SECTOR_MANY": "omv-background-color-pair-error", "BAD_SECTOR": "omv-background-color-pair-warning", "BAD_STATUS": "omv-background-color-pair-gray", "GOOD": "omv-background-color-pair-success" } %}{{ overallStatusColor[overallstatus] }}'
       tooltip: '{% set overallStatusText = { "GOOD": "Good", "BAD_STATUS": "Unknown", "BAD_ATTRIBUTE_NOW": "Device is being used outside design parameters.", "BAD_ATTRIBUTE_IN_THE_PAST": "Device was used outside of design parameters in the past.", "BAD_SECTOR": "Device has a few bad sectors.", "BAD_SECTOR_MANY": "Device has many bad sectors." } %}{{ overallStatusText[overallstatus] | translate }}'
       url: '/storage/smart/devices/details/{{ devicefile | encodeuricomponent }}'
